# mpi-extensions

./: .lgtm.yml  CMakeLists.txt  README.md
.github/workflows/: codeql.yml
fuzz/: fuzz_MPI_Dims_weighted_create.c
src/: CMakeLists.txt  MPI_Dims_weighted_create.c  MPI_Dims_weighted_create.h  MPI_Dims_weighted_create_test.cpp  MPI_Info_set_json.c  MPI_Info_set_json.h  mpi-extensions.h
tests/: CMakeLists.txt  MPI_Dims_weighted_create_test.cpp  MPI_Info_set_json_test.cpp
